--- a/index.html
+++ b/index.html
@@ -50,4 +50,53 @@
     <li>Your Encryption Keys</li>
   </ul>
 
-  <h2>3. Information We Collect (Non-Sensitive Operational D
+  <h2>3. Information We Collect (Non-Sensitive Operational Data)</h2>
+  <p>We collect minimal, non-sensitive data strictly for the purposes of app functionality, maintenance, and improvement:</p>
+  <ul>
+    <li><strong>Usage Data & Analytics:</strong> We may use third-party analytics services (e.g., Google Analytics for Firebase) to collect anonymous, aggregated data about how the App is used. This helps identify crashes, fix bugs, and improve the user experience. This data does not contain any of your vault information.</li>
+    <li><strong>Device Information:</strong> We may collect generic device information such as device type, operating system version, and unique device identifiers to ensure compatibility and diagnose issues.</li>
+    <li><strong>Contact Information:</strong> If you contact us for support, we will collect your email address and the contents of your message to respond to your inquiry.</li>
+  </ul>
+
+  <h2>4. How We Use Information</h2>
+  <p>We use the limited information we collect for the following purposes:</p>
+  <ul>
+    <li>To analyze how users interact with the App (anonymously) to improve performance and features.</li>
+    <li>To provide customer support and respond to your requests.</li>
+    <li>To comply with legal obligations and protect our rights.</li>
+  </ul>
+
+  <h2>5. Sharing of Your Information</h2>
+  <p>We do not sell, trade, or otherwise transfer your personal information to outside parties except in the following limited circumstances:</p>
+  <ul>
+    <li><strong>With your consent:</strong> We may share information if you explicitly authorize us to do so.</li>
+    <li><strong>Legal reasons:</strong> We may disclose information if required by law or in response to a valid request by public authorities (e.g., a court order).</li>
+    <li><strong>Third-Party Services:</strong> We may use minimal third-party services (e.g., for Google Sign-In support, analytics providers) who process data on our behalf. These providers are bound by strict confidentiality agreements, and importantly, the sensitive data they handle remains encrypted and unreadable by them.</li>
+  </ul>
+
+  <h2>6. Data Security</h2>
+  <p>We implement robust security measures to protect the information under our control. All sensitive user data is protected by device OS features, and we are using industry-standard AES-256 encryption for backup and restore.</p>
+
+  <h2>7. User Rights (GDPR & CCPA)</h2>
+  <p>Depending on your location, you may have specific rights regarding your personal data. These may include the right to:</p>
+  <ul>
+    <li>Access the personal data we hold about you.</li>
+    <li>Correct inaccurate or incomplete information.</li>
+    <li>Request deletion of your data.</li>
+    <li>Object to or restrict the processing of your data.</li>
+  </ul>
+  <p>To exercise any of these rights, please contact us at the details below.</p>
+
+  <h2>8. Changes to This Privacy Policy</h2>
+  <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy within the App or on our website and updating the “Effective Date.” You are advised to review this policy periodically for any changes.</p>
+
+  <h2>9. Contact Us</h2>
+  <p>If you have any questions about this Privacy Policy or our data practices, please contact us:</p>
+  <p><strong>Email:</strong> <a href="mailto:contact.bkadambi@gmail.com">contact.bkadambi@gmail.com</a></p>
+
+  <div class="footer">
+    <p>Thank you for using UR-Vault.</p>
+  </div>
+
+</body>
+</html>
